# cockroach

pkg/: BUILD.bazel
pkg/bench/: bench_test.go
pkg/bench/tpcc/: BUILD.bazel  bench_test.go  internal_test.go  subprocess_utils_test.go  tpcc_bench_test.go  utils_test.go
pkg/ccl/partitionccl/: partition.go
pkg/cmd/roachvet/: BUILD.bazel
pkg/server/telemetry/: features.go
pkg/sql/: BUILD.bazel  alter_index.go  alter_role.go  alter_sequence.go  alter_table.go  analyze_expr.go  apply_join.go  cancel_queries.go  cancel_sessions.go  check_external_connection.go  comment_on_index.go  conn_executor.go  conn_executor_exec.go  conn_executor_prepare.go  create_function.go  create_stats.go  create_table.go  delete.go  delete_range.go  delete_swap.go  discard.go  distsql_physical_planner.go  distsql_plan_changefeed.go  distsql_spec_exec_factory.go  drop_database.go  exec_factory_util.go  exec_log.go  exec_util.go  executor_statement_metrics.go  explain_plan.go  explain_tree_test.go  explain_vec.go  grant_revoke_system.go  insert.go  insert_fast_path.go  instrumentation.go  internal.go  levenshtein_scan.go  opt_catalog.go  opt_exec_factory.go  (+34 more)
pkg/sql/backfill/: backfill.go
pkg/sql/colconv/: vec_to_datum.eg.go  vec_to_datum_tmpl.go
pkg/sql/colfetcher/: cfetcher.go
pkg/sql/execinfrapb/: processors.proto  processors_sql.proto
pkg/sql/opt/: colset.go  metadata.go  operator.go  table_meta.go
pkg/sql/paramparse/: paramobserver.go
pkg/sql/parser/: sql.y
pkg/sql/pgwire/: types.go  types_test.go
pkg/sql/prep/: BUILD.bazel  cache.go  cache_test.go  statement.go
(+217 files in other folders)
