load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "prep",
    srcs = [
        "cache.go",
        "metadata.go",
        "statement.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/prep",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sql/catalog/colinfo",
        "//pkg/sql/opt/memo",
        "//pkg/sql/parser/statements",
        "//pkg/sql/sem/tree",
        "//pkg/sql/types",
        "//pkg/util/mon",
        "//pkg/util/timeutil",
        "@com_github_lib_pq//oid",
    ],
)

go_test(
    name = "prep_test",
    srcs = ["cache_test.go"],
    embed = [":prep"],
    deps = [
        "//pkg/util/randutil",
        "@org_golang_x_exp//maps",
    ],
)
